kube/components/om/om-ingestion/om-airflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: om-airflow
  labels:
    app: om-airflow
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 8080
      nodePort: 30808
      targetPort: 8080
  selector:
    app: om-airflow
