kube/components/om/om-ingestion/om-airflow-egress-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-traffic-from-om-airflow
spec:
  podSelector:
    matchLabels:
      app: om-airflow
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 10.1.0.0/24
      ports:
        - protocol: TCP
          port: 3306  # MySQL
        - protocol: TCP
          port: 8080  # Airflow
        - protocol: TCP
          port: 8585  # OM Server
        - protocol: TCP
          port: 8080  # Trino
    - to:
        - podSelector:
            matchExpressions:
              - { key: app, operator: In, values: [ om-mysql, om-server, fq-trino-coordinator ] }
      ports:
        - protocol: TCP
          port: 3306
        - protocol: TCP
          port: 8585
        - protocol: TCP
          port: 8080
